--- a/blog.html
+++ b/blog.html
@@ -9,8 +9,7 @@
     
     <h1>Página de blog </h1>
     <h2>Post número 1</h2>
-    <p>Vendas = R$ 5000,00</p>
-    <a href="Index.html">Voltar para pagina incial</a>
+    <h2>Post número 2</h2>
 
 
 
