--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-    <h1>Página incial </h1>
+    <h1>Página home </h1>
     <a href="vendas.html">Ir para página de vendas</a>
 
 
